--- a/my-app/package.json
+++ b/my-app/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://Rohit-Jagtap-au19.github.io/my-app",
+  "homepage": "https://Rohit-Jagtap-au19.github.io/rohit",
   "name": "my-app",
   "version": "0.1.0",
   "private": true,
